--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,7 +26,7 @@ alert = #A54242
 disabled = #707880
 
 [bar/internal]
-monitor = eDP-1
+monitor = ${env:MONITOR:}
 width = 100%
 height = 23pt
 radius = 0
