--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -410,7 +410,7 @@ schemes:
       magenta: '0xd75f00'
       cyan:    '0x005faf'
       white:   '0x005f87'
-colors: *moonfly
+colors: *monokai-pro
 
 
 ######################################################################
@@ -427,7 +427,7 @@ colors: *moonfly
 # *solarized-dark
 # *tomorrow-night
 
-colors: *moonfly
+colors: *monokai-pro
 
 #######################################
 ##       END OF COLOR SCHEMES        ##
